src/app.css
/* ... */
/* BUTTON SECONDARY */
.button-secondary {
	width: fit-content;
	height: 40px;
	padding: 20px;
	justify-content: center;
	background: none;
	border: 1px solid var(--grey-1);
	border-radius: 20px;
	color: var(--grey-1);
	transition: var(--transition-1);
}

.button-secondary:hover {
	opacity: 0.9;
	border-radius: 4px;
}

.button-secondary:active {
	opacity: 0.8;
}

/* HERO */
.hero {
	height: 75vh;
	padding-left: 144px;
}

.grid {
	position: fixed;
	z-index: -1;
	left: 72px;
	stroke: #ffffff;
	stroke-width: 1px;
	width: calc(100vw - 72px);
	height: 100vh;
	overflow: visible;
}

.hero div {
	position: relative;
	flex-grow: 1;
	height: 220px;
}

.hero div img {
	position: absolute;
	width: 32px;
	height: 32px;
	border-radius: 50%;
	border: 1px solid var(--grey-10);
	box-shadow: var(--shadow-1);
	top: 0;
	left: 76px;
}

.hero div img:nth-of-type(2) {
	left: 57px;
}

.hero div img:nth-of-type(3) {
	left: 38px;
}

.hero div img:nth-of-type(4) {
	left: 19px;
}

.hero div img:nth-of-type(5) {
	left: 0px;
}

.hero div span {
	position: absolute;
	left: 118px;
	top: 4px;
	font-style: italic;
	letter-spacing: -1%;
}

.hero div h1 {
	position: absolute;
	width: fit-content;
	top: 52px;
	left: 0px;
}

.hero div h1:nth-of-type(2) {
	left: 215px;
}

.hero div h1:nth-of-type(3) {
	top: 105px;
}

.hero div svg {
	position: absolute;
	width: 50px;
	height: 50px;
	top: 56px;
	left: 165px;
}

.hero div button {
	position: absolute;
	bottom: 0px;
}

.hero div button:nth-of-type(2) {
	left: 182px;
	bottom: 0px;
}

/* DEMO-VIDEO */
.demo {
	padding: 0px 72px 0px 144px;
}

/* COMPONENTS SECTIONS */
.components {
	padding: 0px 0px 0px 72px;
}

.components h2,
.components p {
	width: 100%;
	min-width: 320px;
	max-width: 348px;
}

.left,
.right {
	height: 100%;
	width: 50%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	gap: 20px;
	background-color: var(--grey-10);
}

.left {
	align-items: end;
	padding: 0 64px 0 208px;
}

.right {
	align-items: start;
	padding: 0 208px 0 64px;
}

.node-graph {
	position: relative;
	overflow: hidden;
	height: 100%;
	width: 50%;
}

.node {
	position: absolute;
	cursor: grab;
	touch-action: none;
	user-select: none;
	overflow: hidden;
	padding: 2px;
	transition: transform var(--transition-2);
}

.node.dragging {
	transition: none;
}

.node:hover {
	transform: scale(1.1) rotate(15deg);
}

.node:active {
	cursor: grabbing;
}

/* SLIDER */
.slider-container {
	overflow: hidden;
	position: relative;
	height: 100%;
	width: 50%;
}

.slider-item {
	position: absolute;
	background-color: var(--grey-10);
	padding: 6px;
	border-radius: var(--radius-1);
	box-shadow: var(--shadow-1);
	transition: var(--transition-2);
}

.slider-controls {
	position: absolute;
	bottom: 20px;
	left: 50%;
	transform: translateX(-50%);
	display: flex;
	gap: 16px;
}

.slider-controls button {
	width: 40px;
	height: 40px;
	border-radius: 50%;
	display: flex;
	padding-bottom: 1px;
	align-items: center;
	justify-content: center;
	background: var(--grey-10);
	color: var(--grey-1);
}

.slider-controls button.active {
	background: linear-gradient(to top, var(--grey-1), var(--grey-3));
	color: var(--grey-10);
}

/* CONTAINER */
.container {
	width: 50%;
	height: 100%;
	display: flex;
	padding: 88px;
	justify-content: center;
	align-items: center;
}

.container div {
	width: 100%;
	max-width: 512px !important;
	aspect-ratio: 1;
	background-color: var(--color-bg);
	padding: 16px;
}

/* TILES */
.tiles {
	border-bottom: 2px solid var(--grey-10);
}

/* FEATURES */
.features-container {
	padding: 156px 96px 164px 168px;
}

.features {
	position: relative;
	width: 100%;
	height: 100%;
	max-width: 864px;
	max-height: 864px;
	display: flex;
	background-color: var(--grey-10);
	border-radius: var(--radius-1);
	box-shadow: var(--shadow-1), var(--shadow-grey);
}

.features h2,
.features p {
	text-wrap: balance;
	width: 296px;
	opacity: 0;
	transition: var(--transition-3);
}

.features span {
	flex-grow: 1;
	position: relative;
	width: 288px;
	overflow: hidden;
	display: flex;
	flex-direction: column;
	justify-content: end;
	padding: 48px;
	gap: 20px;
	transition: var(--transition-3);
	cursor: pointer;
}

.features span:nth-of-type(2) {
	border-left: 2px solid var(--color-bg);
	border-right: 2px solid var(--color-bg);
}

.features span.active {
	width: 100%;
}

.features span.active h2,
.features span.active p {
	opacity: 1;
}

.features-shape {
	position: absolute;
	inset: 48px 0px 0px 48px;
	width: 96px;
	height: 108px;
}

.features-controls {
	position: absolute;
	bottom: -64px;
	left: 50%;
	transform: translateX(-50%);
	display: flex;
	gap: 16px;
}

.features-controls button {
	width: 40px;
	height: 40px;
	border-radius: 50%;
	padding-bottom: 1px;
	justify-content: center;
	background: var(--grey-10);
	color: var(--grey-1);
}

.features-controls button.active {
	background: linear-gradient(to top, var(--grey-1), var(--grey-3));
	color: var(--grey-10);
}

/* PRICING */
.pricing-card {
	position: relative;
	min-width: 360px;
	width: 360px;
	height: 481px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: end;
	gap: 4px;
	padding: 48px 48px 108px 48px;
	border-radius: var(--radius-1);
	box-shadow: var(--shadow-1), var(--shadow-grey);
	background-color: var(--grey-10);
	z-index: 1;
}

.pricing-card h1 {
	position: absolute;
	inset: 48px auto auto 48px;
}

.pricing-card span {
	position: absolute;
	inset: 145px auto auto 48px;
	display: flex;
	align-items: end;
}

.pricing-card button {
	position: absolute;
	inset: auto auto 40px 48px;
}

.pricing-divider {
	position: absolute;
	inset: 193px auto auto 48px;
	height: 1.5px;
	width: 92px;
	background-image: linear-gradient(to right, var(--orange-8), var(--pink-7));
}

.pricing-card svg {
	min-width: 20px;
	min-height: 20px;
	width: 20px;
	height: 20px;
	margin-top: 1px;
	fill: var(--color-text);
}

.pricing-card li {
	list-style-type: none;
	width: 100%;
	display: flex;
	gap: 8px;
}
/* ... */

